--- a/Transfer Learning X-ray.ipynb
+++ b/Transfer Learning X-ray.ipynb
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3ef6b3",
+   "id": "b0572fbe",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "84680c95",
+   "id": "50328d14",
    "metadata": {
     "scrolled": true
    },
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9dd4db5",
+   "id": "9425bec2",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "edd80bc9",
+   "id": "0b5bfd78",
    "metadata": {
     "scrolled": true
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099d27f9",
+   "id": "015dccd8",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "01ec415d",
+   "id": "5cd8c8e2",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81cca22f",
+   "id": "85ddd780",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "bedfddda",
+   "id": "9c86ba5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
    "id": "1bea4436",
    "metadata": {},
    "source": [
-    "<h1 style='color:blue' align='center'>inception_v3 Model</h2>"
+    "<h1 style='color:blue' align='center'>Inception_v3 Model</h2>"
    ]
   },
   {
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f4967d2",
+   "id": "912a0c12",
    "metadata": {},
    "source": [
     "<hr style=\"height:10px;color:black;\">"
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172251da",
+   "id": "f0bb1e53",
    "metadata": {},
    "source": [
     "<h1 style='color:blue' align='center'>Resnet_v2 Model</h2>"
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ecd095",
+   "id": "801af0cc",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "66439978",
+   "id": "6c1167d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ad1fb2",
+   "id": "5deb9b2e",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "4a169514",
+   "id": "f1c3b396",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c41c9d5",
+   "id": "edab10e3",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "22fbc1aa",
+   "id": "5d2388c1",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d47029c",
+   "id": "a73d74ec",
    "metadata": {},
    "source": [
     "<hr style=\"height:2px;color:black;\">\n",
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "38aeab2e",
+   "id": "358a66e6",
    "metadata": {
     "scrolled": true
    },
