--- a/Transfer Learning X-ray v105.ipynb
+++ b/Transfer Learning X-ray v105.ipynb
@@ -455,9 +455,6 @@
     "\n",
     "def image_numpy_to_image_pil(image_np):\n",
     "    return Image.fromarray(image_np)\n",
-    "\n",
-    "\n",
-    "\n",
     "    image1 = np.array(Image.open(str(image)))\n",
     "    resized_img = cv2.resize(image1,(224,224))"
    ]
@@ -937,16 +934,16 @@
    "outputs": [],
    "source": [
     "datagen = ImageDataGenerator(\n",
-    "        featurewise_center=False,  # set input mean to 0 over the dataset\n",
-    "        samplewise_center=False,  # set each sample mean to 0\n",
-    "        featurewise_std_normalization=False,  # divide inputs by std of the dataset\n",
-    "        samplewise_std_normalization=False,  # divide each input by its std\n",
+    "        featurewise_center=False,  \n",
+    "        samplewise_center=False,  \n",
+    "        featurewise_std_normalization=False,  \n",
+    "        samplewise_std_normalization=False,  \n",
     "        brightness_range = (0.3,1),\n",
-    "        zca_whitening=False,  # apply ZCA whitening\n",
-    "        rotation_range=10,  # randomly rotate images in the range (degrees, 0 to 180)\n",
-    "        zoom_range = 0.1, # Randomly zoom image \n",
-    "        horizontal_flip=True,  # randomly flip images\n",
-    "        vertical_flip=False)  # randomly flip images\n",
+    "        zca_whitening=False, \n",
+    "        rotation_range=10,  \n",
+    "        zoom_range = 0.1, \n",
+    "        horizontal_flip=True, \n",
+    "        vertical_flip=False)  \n",
     "\n",
     "\n",
     "datagen.fit(X_train)"
